
5.20  Sun Apr 24 17:00:00 2005
        - improved uploads and parameters
        - added $c->req->protocol and $c->req->secure
        - improved error message when forwarding to unknown module
        - fixed win32 installer
        - added deep recursion detection
        - fixed auto actions
        - fixed inheritance in dispatcher

5.10  Sat Apr 23 11:16:00 2005
        - updated dependencies to require latest module::pluggable::fast
        - new installer for templates and stuff using Module::Build
        - scripts are now prefixed, for being installable
        IMPORTANT: You have to regenerate the script directory,
        remove Makefile.PL and add Build.PL
        - Added compat to install Module::Build if required.
        - Improved: Params handling with MP engines
        - Fixed: Params handling on POST with CGI engine (Andy Grundman)
        - Fixed: Helper.pm on Win32 (Matt S Trout)

5.03  Tue Apr 19 20:35:00 2005 (Revision 462)
        - fixed Test example (Torsten Seeman)
        - added Plugins chapter to manual
        - applied doc patch from Robert Boone <robert@rlb3.com>
        - improved Dispatcher error messages.
        - refactored so we don't need to include helper from
          Catalyst.pm - Fixes issues with FindBin
        - applied HTTP.pm patch from Andy Grundman <andy@hybridized.org>
        - added plugin() method for instant plugins
        - FCGI is no more considered experimental

5.02  Mon Apr 18 10:00:00 2005
        - fixed manifest

5.01  Sun Apr 17 23:00:00 2005
        - some documentation bugs fixed
        - added Catalyst::Utils
        - fixed regexp bug (Matt S Trout)
        - fixed upload bug with MP19
        - added $c->req->body
        - aliased $c->res->output to $c->res->body
        - Read AUTHOR from passwd or $ENV{AUTHOR} when 
          generating code.
        - extended attribute handling
        - added global config for components

5.00  Fri Apr 15 18:00:00 2005