@@ -8,6 +8,8 @@ This file documents the revision history for Perl extension Catalyst.
         - added deep recursion detection
         - fixed auto actions
         - fixed inheritance in dispatcher
+        - allow whitespaces between brackets and quoted string
+          in Path and Regex attributes
 
 5.10  Sat Apr 23 11:16:00 2005
         - updated dependencies to require latest module::pluggable::fast
